--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.btnSm{
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 45px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #000000;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+
+.btnSm:hover{
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.45);
+    color: #fff;
+    transform: translateY(-4px);
+}
+
+
