JE colores de las cartas

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,8 @@
     background-image: url(../../public/img/fondosCartas/fondoPokemon.svg);
     background-repeat: repeat;
 }
+
+.imgFull{
+    width: 100% !important;
+    height: auto !important;
+}
