--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,80 +2,77 @@
 @tailwind components;
 @tailwind utilities;
 
-
-.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #ffffff;
-    border: none;
-    box-shadow: 0px 8px 15px rgba(34, 47, 62, 0.2);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
+.btn {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-transform: uppercase;
+   letter-spacing: 2px;
+   color: #ffffff;
+   border: none;
+   box-shadow: 0px 8px 15px rgba(34, 47, 62, 0.2);
+   transition: all 0.3s ease 0s;
+   cursor: pointer;
+   outline: none;
 }
 
-.btnRed{
-    background-color: rgb(239, 68, 68);
+.btnRed {
+   background-color: rgb(239, 68, 68);
 }
 
-.btnOrange{
-    background-color: rgb(234, 88, 12);
+.btnOrange {
+   background-color: rgb(234, 88, 12);
 }
 
-.btnBlue{
-    background-color: rgb(37 ,99, 235);
+.btnBlue {
+   background-color: rgb(37, 99, 235);
 }
 
-.btnEmerald{
-    background-color: rgb(5, 150, 105);
+.btnEmerald {
+   background-color: rgb(5, 150, 105);
 }
 
-
-
-.btnRed:hover{
-    box-shadow: 0px 15px 20px rgba(34, 47, 62,0.5);
-    background-color: #fff;
-    color: rgb(239, 68, 68);
-    transform: translateY(-4px);
+.btnRed:hover {
+   box-shadow: 0px 15px 20px rgba(34, 47, 62, 0.5);
+   background-color: #fff;
+   color: rgb(239, 68, 68);
+   transform: translateY(-4px);
 }
 
-.btnOrange:hover{
-    box-shadow: 0px 15px 20px rgba(34, 47, 62,0.5);
-    background-color: #fff;
-    color: rgb(251, 146, 60);;
-    transform: translateY(-4px);
+.btnOrange:hover {
+   box-shadow: 0px 15px 20px rgba(34, 47, 62, 0.5);
+   background-color: #fff;
+   color: rgb(251, 146, 60);
+   transform: translateY(-4px);
 }
 
-.btnBlue:hover{
-    box-shadow: 0px 15px 20px rgba(34, 47, 62,0.5);
-    background-color: #fff;
-    color: rgb(96, 165, 250);
-    transform: translateY(-4px);
+.btnBlue:hover {
+   box-shadow: 0px 15px 20px rgba(34, 47, 62, 0.5);
+   background-color: #fff;
+   color: rgb(96, 165, 250);
+   transform: translateY(-4px);
 }
 
-.btnEmerald:hover{
-    box-shadow: 0px 15px 20px rgba(34, 47, 62,0.5);
-    background-color: #fff;
-    color: rgb(52, 211, 153);
-    transform: translateY(-4px);
+.btnEmerald:hover {
+   box-shadow: 0px 15px 20px rgba(34, 47, 62, 0.5);
+   background-color: #fff;
+   color: rgb(52, 211, 153);
+   transform: translateY(-4px);
 }
 
-
-
-
-.sombra{
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+.sombra {
+   box-shadow:
+      rgba(0, 0, 0, 0.4) 0px 2px 4px,
+      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-.backImgPokemon{
-    background-image: url(../../public/img/fondosCartas/fondoPokemon.svg);
-    background-repeat: repeat;
+.backImgPokemon {
+   background-image: url(../../public/img/fondosCartas/fondoPokemon.svg);
+   background-repeat: repeat;
 }
 
-.imgFull{
-    width: 100% !important;
-    height: auto !important;
+.imgFull {
+   width: 100% !important;
+   height: auto !important;
 }
